--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+:root {
+    --blue: rgba(63, 81, 181, 1);
+    --shadow: 0px 4px 6px rgb(0,0,0,0.2);
+}
+
+.padding-tb-15px {
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.padding-tb-30px {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
