--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,6 +2,7 @@
   <div class="container">
       <a mat-button (click)="goTo('/home')" > Home </a>
       <a mat-button (click)="goTo('/pessoas/listar')" > Listar Pessoas </a>
-      <a mat-button (click)="goTo('/address/listar')" > Listar Endereços </a>
+      <a mat-button (click)="goTo('/enderecos/listar')" > Listar Endereços </a>
+      <a mat-button (click)="goTo('/tipos-enderecos/listar')" > Listar Tipos de Endereços </a>
   </div>
 </mat-toolbar>
