--- a/src/app/pages/address/create-edit/create-edit.component.html
+++ b/src/app/pages/address/create-edit/create-edit.component.html
@@ -12,7 +12,7 @@
         </div>
     </div>
 
-    <mat-form-field>
+    <mat-form-field class="form-group">
         <mat-label> Está ativo?:</mat-label>
         <mat-select formControlName="active" [ngClass]="{ 'is-invalid': submitted && f.active.errors }" >
             <mat-option *ngFor="let item of addresOpts" value="{{item.value}}" >
