--- a/src/app/pages/people/list/list.component.html
+++ b/src/app/pages/people/list/list.component.html
@@ -1,3 +1,11 @@
+<div class="list-container">
+
+    <div class="cabecalho">
+      <h1> Busque por pessoas cadastradas: </h1>
+    </div>
+
+    <button mat-button (click)="exportar()"> Exportar para Excell </button>
+
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
  
   <ng-container matColumnDef="name">
@@ -59,3 +67,5 @@
   <tr mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></tr>
 
 </table>
+
+</div>
