--- a/src/app/pages/type-address/create-edit/create-edit.component.html
+++ b/src/app/pages/type-address/create-edit/create-edit.component.html
@@ -5,10 +5,10 @@
     <form [formGroup]="novoTypeAddress" (ngSubmit)="onSubmit(novoTypeAddress)">
   
       <div class="form-group">
-          <label for="number">Número:</label>
-          <input type="text" formControlName="number" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.number.errors }" />
-          <div *ngIf="submitted && f.number.errors" class="invalid-feedback">
-              <div *ngIf="f.number.errors.required">Digite o número.</div>
+          <label for="name">Nome:</label>
+          <input type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
+          <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+              <div *ngIf="f.name.errors.required">Digite o número.</div>
           </div>
       </div>
   
