--- a/src/app/pages/type-address/list/list.component.html
+++ b/src/app/pages/type-address/list/list.component.html
@@ -1,26 +1,35 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
- 
-    <ng-container matColumnDef="number">
-      <th mat-header-cell *matHeaderCellDef> Número </th>
-      <td mat-cell *matCellDef="let item"> {{item.name}} </td>
-    </ng-container>
+<div class="list-container">
+
+  <div class="cabecalho">
+    <h1> Busque por tipos de endereços: </h1>
+  </div>
+
+  <button mat-button (click)="exportar()"> Exportar para Excell </button>
+
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Nome </th>
+        <td mat-cell *matCellDef="let item"> {{item.name}} </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="active">
+        <th mat-header-cell *matHeaderCellDef> Está ativo? </th>
+        <td mat-cell *matCellDef="let item"> {{ item.active }} </td>
+      </ng-container>
     
-    <ng-container matColumnDef="active">
-      <th mat-header-cell *matHeaderCellDef> Está ativo? </th>
-      <td mat-cell *matCellDef="let item"> {{ item.getStatus() }} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="edit">
-      <th mat-header-cell *matHeaderCellDef> Editar </th>
-      <td mat-cell *matCellDef="let item"> <button mat-button (click)="editar(item)" > editar </button> </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="delete">
-      <th mat-header-cell *matHeaderCellDef> Deletar </th>
-      <td mat-cell *matCellDef="let item"> <button mat-button (click)="deletar(item.id)" > delete </button> </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-    <tr mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></tr>
-  
-  </table>
+      <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef> Editar </th>
+        <td mat-cell *matCellDef="let item"> <button mat-button (click)="editar(item)" > editar </button> </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef> Deletar </th>
+        <td mat-cell *matCellDef="let item"> <button mat-button (click)="deletar(item.id)" > delete </button> </td>
+      </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+      <tr mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></tr>
+    
+    </table>
+</div>
