--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,8 +1,27 @@
 <mat-toolbar>
   <div class="container">
-      <a mat-button (click)="goTo('/home')" > Home </a>
+      <a mat-button (click)="goTo('home')" > Home </a>
+    <!--
       <a mat-button (click)="goTo('/pessoas/listar')" > Listar Pessoas </a>
       <a mat-button (click)="goTo('/enderecos/listar')" > Listar Endereços </a>
       <a mat-button (click)="goTo('/tipos-enderecos/listar')" > Listar Tipos de Endereços </a>
+    -->
+      <button mat-button [matMenuTriggerFor]="menu"> Pessoas </button>
+      <mat-menu #menu="matMenu">
+        <button (click)="goTo('pessoas/adicionar')" mat-menu-item> Cadastrar novo </button>
+        <button (click)="goTo('pessoas/listar')" mat-menu-item> Buscar </button>
+      </mat-menu>
+
+      <button mat-button [matMenuTriggerFor]="menu"> Endereços </button>
+      <mat-menu #menu="matMenu">
+        <button (click)="goTo('enderecos/adicionar')" mat-menu-item> Cadastrar novo </button>
+        <button (click)="goTo('enderecos/listar')" mat-menu-item> Buscar </button>
+      </mat-menu>
+      
+      <button mat-button [matMenuTriggerFor]="menu"> Tipos de endereços </button>
+      <mat-menu #menu="matMenu">
+        <button (click)="goTo('tipos-enderecos/adicionar')" mat-menu-item> Cadastrar novo </button>
+        <button (click)="goTo('tipos-enderecos/listar')" mat-menu-item> Buscar </button>
+      </mat-menu>
   </div>
 </mat-toolbar>
