update, almost finished, guards implemented

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,28 +4,19 @@
       <br/>
       <h2> Sistema gerenciados de cadastros pessoais </h2>
       <br/>
-      <div class="flex-row-center">
+      <!-- <div class="flex-row-center"> -->
+        <ul>
+            <li>
+                <span>Desenvolvedor: </span> Alisson de Freitas Moreira;
+            </li>
+            <li>
+                <span>E-mail: </span> alisson_freitas@outlook.com;
+            </li>
+            <li>
+                <span>Celular: </span> (34) 9 9117-4409;
+            </li>
+        </ul>
 
-              <!--
-              <mat-card class="example-card">
-                  <mat-card-header>
-                      <div mat-card-avatar class="example-header-image"></div>
-                      <mat-card-title>Álisson de Freitas Moreira</mat-card-title>
-                      <mat-card-subtitle>Desenvolvedor</mat-card-subtitle>
-                  </mat-card-header>
-                  <img mat-card-image src="../../../../assets/imgs/perfil.jpg" alt="Alisson de Freitas Moreira">
-                  <mat-card-content>
-                      <ul>
-                          <li> Celular: 34 99117-4409 </li>
-                          <li> E-mail: alisson_freitas@outlook.com </li>
-                          <li> Endereço: Av. Salomao Abraao, 722 </li>
-                      </ul>
-                  </mat-card-content>
-                  <mat-card-actions>
-                  </mat-card-actions>
-              </mat-card>
-              -->
-
-      </div>
+      <!-- </div> -->
   </div>
 </div>
