--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -11,3 +11,10 @@ mat-toolbar {
 mat-toolbar * {
     color: white;
 }
+
+.float-right {
+    float: right;
+    position: relative;
+    width: auto;
+    height: auto;
+}
