--- a/src/app/pages/people/list/list.component.css
+++ b/src/app/pages/people/list/list.component.css
@@ -19,3 +19,12 @@ table th {
 table * {
     text-align: center;
 }
+
+table .max-width-35px {
+    max-width: 35px !important;
+}
+
+table .icon {
+    max-width: 20px;
+    max-height: 20px;
+}
