--- a/src/app/pages/people/list/list.component.html
+++ b/src/app/pages/people/list/list.component.html
@@ -54,13 +54,13 @@
   </ng-container>
 
   <ng-container matColumnDef="edit">
-    <th mat-header-cell *matHeaderCellDef> Editar </th>
-    <td mat-cell *matCellDef="let item"> <button mat-button (click)="editar(item)" > editar </button> </td>
+    <th mat-header-cell class="'max-width-35px'" *matHeaderCellDef> Editar </th>
+    <td mat-cell class="'max-width-35px'" *matCellDef="let item"> <button mat-button (click)="editar(item)" > <img class="icon" src="../../../../assets/imgs/edit-icon.png" /> </button> </td>
   </ng-container>
 
   <ng-container matColumnDef="delete">
-    <th mat-header-cell *matHeaderCellDef> Deletar </th>
-    <td mat-cell *matCellDef="let item"> <button mat-button (click)="deletar(item.id)" > delete </button> </td>
+    <th mat-header-cell [ngClass]="'max-width-35px'" *matHeaderCellDef> Deletar </th>
+    <td mat-cell [ngClass]="'max-width-35px'" *matCellDef="let item"> <button mat-button (click)="deletar(item.id)" > <img class="icon" src="../../../../assets/imgs/trash-icon.png" /> </button> </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
