--- a/src/app/pages/type-address/list/list.component.html
+++ b/src/app/pages/type-address/list/list.component.html
@@ -20,12 +20,12 @@
     
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef> Editar </th>
-        <td mat-cell *matCellDef="let item"> <button mat-button (click)="editar(item)" > editar </button> </td>
+        <td mat-cell *matCellDef="let item"> <button mat-button (click)="editar(item)" > <img style="max-width: 20px; max-height: 20px" src="../../../../assets/imgs/edit-icon.png" /> </button> </td>
       </ng-container>
     
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef> Deletar </th>
-        <td mat-cell *matCellDef="let item"> <button mat-button (click)="deletar(item.id)" > delete </button> </td>
+        <td mat-cell *matCellDef="let item"> <button mat-button (click)="deletar(item.id)" > <img style="max-width: 20px; max-height: 20px" src="../../../../assets/imgs/trash-icon.png" /> </button> </td>
       </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
