--- a/src/app/pages/address/list/list.component.css
+++ b/src/app/pages/address/list/list.component.css
@@ -19,3 +19,26 @@ table th {
 table * {
     text-align: center;
 }
+
+.filter-group {
+    position: relative;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.filter-group .filter-data, .filter-group .filter-buttons {
+    width: 50%;
+}
+
+.filter-data .custom-group {
+    width: 49%;
+}
+
+.filter-buttons, .filter-data {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
