--- a/src/app/pages/address/list/list.component.html
+++ b/src/app/pages/address/list/list.component.html
@@ -2,11 +2,41 @@
 
   <div class="cabecalho">
     <h1> Busque por endereços cadastrados: </h1>
+    
+    <div class="filter-group">
+
+      <div class="filter-data">
+
+        <div class="form-group custom-group">
+            <input id="nomeFilter" placeholder="Nome" class="form-control" [(ngModel)]="nomeFilterTxt" />
+        </div>
+
+        <mat-form-field class="form-group">
+            <mat-label> Status:  </mat-label>
+            <mat-select color="primary" #statusFilter (change)="filterStatusChange($event)" >
+                <mat-option *ngFor="let item of statusFilterOpts" [value]="item.value" >
+                    {{item.viewValue}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+
+      </div>
+
+      <div class="filter-buttons">
+        <button mat-raised-button color="primary" (click)="verTodosOsRetistros()"> Ver tudo </button>
+        <button mat-raised-button color="primary" (click)="filtrar()" >Filtrar Dados</button>
+        <button mat-raised-button color="primary" (click)="limparFiltro()" > Limpar Filtro</button>
+      </div>
+
+    </div>
+
   </div>
 
-  <button mat-button (click)="exportar()"> Exportar para Excell </button>
+  <button [hidden]="hideTable" style="position: relative; float: right;" mat-button (click)="exportar()" title="Exportar para excell"> 
+    <img style="max-width: 25px; max-height: 25px;" src="../../../../assets/imgs/excell-icon.png" />
+  </button>
 
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <table [hidden]="hideTable" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
  
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Nome </th>
@@ -36,6 +66,11 @@
     <ng-container matColumnDef="complement">
       <th mat-header-cell *matHeaderCellDef> Complemento </th>
       <td mat-cell *matCellDef="let item"> {{item.complement}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="typeAddress">
+      <th mat-header-cell *matHeaderCellDef> Tipo do endereço </th>
+      <td mat-cell *matCellDef="let item"> {{item?.typeAddress?.name}} </td>
     </ng-container>
     
     <ng-container matColumnDef="edit">
