--- a/src/app/pages/type-address/create-edit/create-edit.component.css
+++ b/src/app/pages/type-address/create-edit/create-edit.component.css
@@ -14,6 +14,11 @@
     display: inline-block;
 }
 
+
+.button-container .form-group.button-container {
+    width: 100%;
+}
+
 @media(max-width: 768px){
     .content-container .form-group {
         width: 100%;
