--- a/src/app/pages/type-address/list/list.component.html
+++ b/src/app/pages/type-address/list/list.component.html
@@ -2,9 +2,26 @@
 
   <div class="cabecalho">
     <h1> Busque por tipos de endereços: </h1>
+
+    <!--
+    <input MatInput [(ngModel)]="nomeFilterTxt" />
+
+    <mat-select color="primary" #statusFilter (change)="filterStatusChange($event)" >
+        <mat-option *ngFor="let item of statusFilterOpts" [value]="item.value" >
+            {{item.viewValue}}
+        </mat-option>
+    </mat-select>
+
+    <button mat-button color="primary" (click)="verTodosOsRetistros()"> Ver tudo </button>
+    <button mat-button color="primary" (click)="filtrar()" >Filtrar Dados</button>
+    <button mat-button color="primary" (click)="limparFiltro()" > Limpar Filtro</button>
+    -->
+
   </div>
 
-  <button mat-button (click)="exportar()"> Exportar para Excell </button>
+  <button style="position: relative; float: right;" mat-button (click)="exportar()" title="Exportar para excell"> 
+    <img style="max-width: 25px; max-height: 25px;" src="../../../../assets/imgs/excell-icon.png" />
+  </button>
 
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   
