--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <div class="container">
-      <a mat-button (click)="goTo('home')" > Home </a>
+      <a mat-button (click)="goTo('app/home')" > Home </a>
     <!--
       <a mat-button (click)="goTo('/pessoas/listar')" > Listar Pessoas </a>
       <a mat-button (click)="goTo('/enderecos/listar')" > Listar Endereços </a>
