--- a/src/app/pages/people/list/list.component.css
+++ b/src/app/pages/people/list/list.component.css
@@ -32,3 +32,26 @@ table .icon {
     max-width: 20px;
     max-height: 20px;
 }
+
+.filter-group {
+    position: relative;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.filter-group .filter-data, .filter-group .filter-buttons {
+    width: 50%;
+}
+
+.filter-data .custom-group {
+    width: 49%;
+}
+
+.filter-buttons, .filter-data {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
