--- a/src/app/pages/people/list/list.component.html
+++ b/src/app/pages/people/list/list.component.html
@@ -2,6 +2,27 @@
 
     <div class="cabecalho">
       <h1> Busque por pessoas cadastradas: </h1>
+
+      <div class="filter-group">
+        <div class="filter-data">
+          <div class="form-group custom-group">
+              <input id="nomeFilter" placeholder="Nome" class="form-control" [(ngModel)]="nomeFilterTxt" />
+          </div>
+          <mat-form-field class="form-group">
+              <mat-label> Tipo de Pessoa:  </mat-label>
+              <mat-select color="primary" #statusFilter (selectionChange)="filterStatusChange($event.value)" >
+                  <mat-option *ngFor="let item of peopletTypeFilterOpts" [value]="item.value" >
+                      {{item.viewValue}}
+                  </mat-option>
+              </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="filter-buttons">
+          <button mat-raised-button color="primary" (click)="filtrar()" >Filtrar</button>
+          <button mat-raised-button color="primary" (click)="verTodosOsRetistros()"> Ver tudo </button>
+        </div>
+      </div>
+
     </div>
 
   <button style="position: relative; float: right;" mat-button (click)="exportar()" title="Exportar para excell"> 
