--- a/src/app/pages/address/list/list.component.css
+++ b/src/app/pages/address/list/list.component.css
@@ -32,13 +32,15 @@ table * {
     width: 50%;
 }
 
-.filter-data .custom-group {
-    width: 49%;
-}
 
 .filter-buttons, .filter-data {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
     align-items: center;
+}
+
+.filter-data .custom-group, .filter-data mat-form-field {
+    padding: 0 10px !important;
+    width: 100%;
 }
